feat: add support for second signature signing

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
   "peer": "https://dapi.ark.io",
   "oldBlsPublicKey": "",
   "newBlsPublicKey": "",
-  "passphrase": ""
+  "passphrase": "",
+  "secondPassphrase": ""
 }
